Update logging demo notebook to include TRACE_LASIO level

--- a/notebooks/set logging level for lasio.ipynb
+++ b/notebooks/set logging level for lasio.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "Sometimes you may want more or less information shown to you when you are reading LAS files with `lasio`. \n",
     "\n",
-    "By default the logging level is set to `WARNING`, so you will only see a certain class of messages:"
+    "By default in a Jupyter Notebook the logging level is set to `WARNING`, so you will only see a certain class of messages:"
    ]
   },
   {
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l = lasio.read('../tests/examples/sample.las')"
+    "l = lasio.read(\"../tests/examples/sample.las\")"
    ]
   },
   {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -72,8 +72,8 @@
     }
    ],
    "source": [
-    "logger = logging.getLogger(lasio.__name__)\n",
-    "logger.setLevel(logging.INFO)\n",
+    "lasio_logger = logging.getLogger(\"lasio\")\n",
+    "lasio_logger.setLevel(logging.INFO)\n",
     "\n",
     "l = lasio.read('../tests/examples/sample.las')"
    ]
@@ -82,12 +82,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To get even _more_ information, you can set the logging level to `DEBUG`:"
+    "To get more information, you can set the logging level to `DEBUG`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -95,6 +95,8 @@
      "output_type": "stream",
      "text": [
       "DEBUG:lasio.las:Reading ../tests/examples/sample.las...\n",
+      "DEBUG:lasio.las:Ignore header lines beginning with ('#',)\n",
+      "DEBUG:lasio.las:Ignore data lines beginning with #\n",
       "DEBUG:lasio.reader:get_encoding Using cchardet\n",
       "DEBUG:lasio.reader:cchardet method detected encoding of ASCII at confidence 1.0\n",
       "INFO:lasio.reader:Opening ../tests/examples/sample.las as ASCII and treating errors with \"replace\"\n",
@@ -106,8 +108,7 @@
       "DEBUG:lasio.reader:adding substitution run-on(NaN.)\n",
       "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('(\\\\d),(\\\\d)') substr=\"\\1.\\2\"\n",
       "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('(\\\\d)-(\\\\d)') substr=\"\\1 -\\2\"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('-?\\\\d*\\\\.\\\\d*\\\\.\\\\d*') substr=\" NaN NaN \"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('NaN[\\\\.-]\\\\d+') substr=\" NaN NaN \"\n",
+      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('-?\\\\d*\\\\.\\\\d*\\\\.\\\\d*|NaN[\\\\.-]\\\\d+') substr=\" NaN NaN \"\n",
       "DEBUG:lasio.reader:using null policy of \"strict\"\n",
       "DEBUG:lasio.reader:adding substitution NULL\n",
       "DEBUG:lasio.reader:located substitution for LAS.version.NULL as True\n",
@@ -122,7 +123,7 @@
       "DEBUG:lasio.reader:Line 5: treating as a comment and ignoring: '#MNEM.UNIT       DATA TYPE    INFORMATION'\n",
       "DEBUG:lasio.reader:Line 6: treating as a comment and ignoring: '#---------    -------------   ------------------------------'\n",
       "DEBUG:lasio.reader:Line 7: parsed as HeaderItem(mnemonic=\"STRT\", unit=\"M\", value=\"1670.0\", descr=\"\")\n",
-      "DEBUG:lasio.reader:Line 8: parsed as HeaderItem(mnemonic=\"STOP\", unit=\"M\", value=\"1660.0\", descr=\"\")\n",
+      "DEBUG:lasio.reader:Line 8: parsed as HeaderItem(mnemonic=\"STOP\", unit=\"M\", value=\"1669.75\", descr=\"\")\n",
       "DEBUG:lasio.reader:Line 9: parsed as HeaderItem(mnemonic=\"STEP\", unit=\"M\", value=\"-0.125\", descr=\"\")\n",
       "DEBUG:lasio.reader:Line 10: parsed as HeaderItem(mnemonic=\"NULL\", unit=\"\", value=\"-999.25\", descr=\"\")\n",
       "DEBUG:lasio.reader:Line 11: parsed as HeaderItem(mnemonic=\"COMP\", unit=\"\", value=\"# ANY OIL COMPANY LTD.\", descr=\"CO\")\n",
@@ -160,36 +161,148 @@
       "DEBUG:lasio.las:Parsing Data section at lines 43-47 (1947 bytes) ~A  DEPTH     DT       RHOB     NPHI     SFLU     SFLA      ILM      ILD\n",
       "DEBUG:lasio.las:Storing reference and returning later...\n",
       "DEBUG:lasio.las:Reading data section ~A  DEPTH     DT       RHOB     NPHI     SFLU     SFLA      ILM      ILD\n",
-      "DEBUG:lasio.reader:Line 44: 8 items counted in '1670.000   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
-      "DEBUG:lasio.reader:Line 45: 8 items counted in '1669.875   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
-      "DEBUG:lasio.reader:Line 46: 8 items counted in '1669.750   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
-      "DEBUG:lasio.reader:Line 44: reading data '1670.000   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
-      "DEBUG:lasio.reader:Line 45: reading data '1669.875   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
-      "DEBUG:lasio.reader:Line 46: reading data '1669.750   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
-      "DEBUG:lasio.las:Read ndarray (24,)\n",
-      "DEBUG:lasio.las:~A data [1.670000e+03 1.234500e+02 2.550000e+03 4.500000e-01 1.234500e+02\n",
-      " 1.234500e+02 1.102000e+02 1.056000e+02 1.669875e+03 1.234500e+02\n",
-      " 2.550000e+03 4.500000e-01 1.234500e+02 1.234500e+02 1.102000e+02\n",
-      " 1.056000e+02 1.669750e+03 1.234500e+02 2.550000e+03 4.500000e-01\n",
-      " 1.234500e+02 1.234500e+02 1.102000e+02 1.056000e+02]\n",
-      "DEBUG:lasio.las:~A after NULL replacement data [1.670000e+03 1.234500e+02 2.550000e+03 4.500000e-01 1.234500e+02\n",
-      " 1.234500e+02 1.102000e+02 1.056000e+02 1.669875e+03 1.234500e+02\n",
-      " 2.550000e+03 4.500000e-01 1.234500e+02 1.234500e+02 1.102000e+02\n",
-      " 1.056000e+02 1.669750e+03 1.234500e+02 2.550000e+03 4.500000e-01\n",
-      " 1.234500e+02 1.234500e+02 1.102000e+02 1.056000e+02]\n",
-      "DEBUG:lasio.las:Data array (size (24,)) assumed to have 8 columns (8 curves defined)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:lasio.las:set_data. names to use: ['DEPT', 'DT', 'RHOB', 'NPHI', 'SFLU', 'SFLA', 'ILM', 'ILD']\n"
+      "DEBUG:lasio.reader:Consistently found 8 columns\n",
+      "DEBUG:lasio.las:Assigning data [1670.    1669.875 1669.75 ] to curve #0\n",
+      "DEBUG:lasio.las:Replacing -999.25 with nan in 1-th curve\n",
+      "DEBUG:lasio.las:Assigning data [123.45 123.45 123.45] to curve #1\n",
+      "DEBUG:lasio.las:Replacing -999.25 with nan in 2-th curve\n",
+      "DEBUG:lasio.las:Assigning data [2550. 2550. 2550.] to curve #2\n",
+      "DEBUG:lasio.las:Replacing -999.25 with nan in 3-th curve\n",
+      "DEBUG:lasio.las:Assigning data [0.45 0.45 0.45] to curve #3\n",
+      "DEBUG:lasio.las:Replacing -999.25 with nan in 4-th curve\n",
+      "DEBUG:lasio.las:Assigning data [123.45 123.45 123.45] to curve #4\n",
+      "DEBUG:lasio.las:Replacing -999.25 with nan in 5-th curve\n",
+      "DEBUG:lasio.las:Assigning data [123.45 123.45 123.45] to curve #5\n",
+      "DEBUG:lasio.las:Replacing -999.25 with nan in 6-th curve\n",
+      "DEBUG:lasio.las:Assigning data [110.2 110.2 110.2] to curve #6\n",
+      "DEBUG:lasio.las:Replacing -999.25 with nan in 7-th curve\n",
+      "DEBUG:lasio.las:Assigning data [105.6 105.6 105.6] to curve #7\n"
      ]
     }
    ],
    "source": [
-    "logger.setLevel(logging.DEBUG)\n",
+    "lasio_logger.setLevel(logging.DEBUG)\n",
+    "\n",
+    "l = lasio.read('../tests/examples/sample.las')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To see **all** of lasio's logger messages (for development purposes), use `TRACE_LASIO`. It's not obvious in the example below, but this shows a message for each line of the LAS file, e.g.:\n",
+    "\n",
+    "```\n",
+    "DEBUG:lasio.las:Reading data section ~A  DEPTH     DT       RHOB     NPHI     SFLU     SFLA      ILM      ILD\n",
+    "TRACE_LASIO:lasio.reader:Line 44: 8 items counted in '1670.000   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
+    "TRACE_LASIO:lasio.reader:Line 45: 8 items counted in '1669.875   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
+    "TRACE_LASIO:lasio.reader:Line 46: 8 items counted in '1669.750   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
+    "DEBUG:lasio.reader:Consistently found 8 columns\n",
+    "```\n",
+    "\n",
+    "This will significantly slow down your code, so only do this if you need to."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:lasio.las:Reading ../tests/examples/sample.las...\n",
+      "DEBUG:lasio.las:Ignore header lines beginning with ('#',)\n",
+      "DEBUG:lasio.las:Ignore data lines beginning with #\n",
+      "DEBUG:lasio.reader:get_encoding Using cchardet\n",
+      "DEBUG:lasio.reader:cchardet method detected encoding of ASCII at confidence 1.0\n",
+      "INFO:lasio.reader:Opening ../tests/examples/sample.las as ASCII and treating errors with \"replace\"\n",
+      "DEBUG:lasio.las:Fetching substitutions for read_policy default and null policy strict\n",
+      "DEBUG:lasio.reader:using read policy of \"default\"\n",
+      "DEBUG:lasio.reader:adding substitution comma-decimal-mark\n",
+      "DEBUG:lasio.reader:adding substitution run-on(-)\n",
+      "DEBUG:lasio.reader:adding substitution run-on(.)\n",
+      "DEBUG:lasio.reader:adding substitution run-on(NaN.)\n",
+      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('(\\\\d),(\\\\d)') substr=\"\\1.\\2\"\n",
+      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('(\\\\d)-(\\\\d)') substr=\"\\1 -\\2\"\n",
+      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('-?\\\\d*\\\\.\\\\d*\\\\.\\\\d*|NaN[\\\\.-]\\\\d+') substr=\" NaN NaN \"\n",
+      "DEBUG:lasio.reader:using null policy of \"strict\"\n",
+      "DEBUG:lasio.reader:adding substitution NULL\n",
+      "DEBUG:lasio.reader:located substitution for LAS.version.NULL as True\n",
+      "DEBUG:lasio.reader:added numerical substitution: None\n",
+      "DEBUG:lasio.las:Found 6 sections\n",
+      "DEBUG:lasio.las:Parsing Header items section at lines 1-3 (0 bytes) ~VERSION INFORMATION\n",
+      "DEBUG:lasio.reader:Line 1: Section title parsed as '~VERSION INFORMATION'\n",
+      "DEBUG:lasio.reader:Line 2: parsed as HeaderItem(mnemonic=\"VERS\", unit=\"\", value=\"1.2\", descr=\"CWLS LOG ASCII STANDA\")\n",
+      "DEBUG:lasio.reader:Line 3: parsed as HeaderItem(mnemonic=\"WRAP\", unit=\"\", value=\"NO\", descr=\"ONE LINE PER DEPTH STE\")\n",
+      "DEBUG:lasio.las:Parsing Header items section at lines 4-18 (146 bytes) ~WELL INFORMATION BLOCK\n",
+      "DEBUG:lasio.reader:Line 4: Section title parsed as '~WELL INFORMATION BLOCK'\n",
+      "DEBUG:lasio.reader:Line 5: treating as a comment and ignoring: '#MNEM.UNIT       DATA TYPE    INFORMATION'\n",
+      "DEBUG:lasio.reader:Line 6: treating as a comment and ignoring: '#---------    -------------   ------------------------------'\n",
+      "DEBUG:lasio.reader:Line 7: parsed as HeaderItem(mnemonic=\"STRT\", unit=\"M\", value=\"1670.0\", descr=\"\")\n",
+      "DEBUG:lasio.reader:Line 8: parsed as HeaderItem(mnemonic=\"STOP\", unit=\"M\", value=\"1669.75\", descr=\"\")\n",
+      "DEBUG:lasio.reader:Line 9: parsed as HeaderItem(mnemonic=\"STEP\", unit=\"M\", value=\"-0.125\", descr=\"\")\n",
+      "DEBUG:lasio.reader:Line 10: parsed as HeaderItem(mnemonic=\"NULL\", unit=\"\", value=\"-999.25\", descr=\"\")\n",
+      "DEBUG:lasio.reader:Line 11: parsed as HeaderItem(mnemonic=\"COMP\", unit=\"\", value=\"# ANY OIL COMPANY LTD.\", descr=\"CO\")\n",
+      "DEBUG:lasio.reader:Line 12: parsed as HeaderItem(mnemonic=\"WELL\", unit=\"\", value=\"ANY ET AL OIL WELL #12\", descr=\"WE\")\n",
+      "DEBUG:lasio.reader:Line 13: parsed as HeaderItem(mnemonic=\"FLD\", unit=\"\", value=\"EDAM\", descr=\"FIELD\")\n",
+      "DEBUG:lasio.reader:Line 14: parsed as HeaderItem(mnemonic=\"LOC\", unit=\"\", value=\"A9-16-49-20W3M\", descr=\"LOCATION\")\n",
+      "DEBUG:lasio.reader:Line 15: parsed as HeaderItem(mnemonic=\"PROV\", unit=\"\", value=\"SASKATCHEWAN\", descr=\"PROVINCE\")\n",
+      "DEBUG:lasio.reader:Line 16: parsed as HeaderItem(mnemonic=\"SRVC\", unit=\"\", value=\"ANY LOGGING COMPANY LTD.\", descr=\"\")\n",
+      "DEBUG:lasio.reader:Line 17: parsed as HeaderItem(mnemonic=\"DATE\", unit=\"\", value=\"25-DEC-1988\", descr=\"LOG DATE\")\n",
+      "DEBUG:lasio.reader:Line 18: parsed as HeaderItem(mnemonic=\"UWI\", unit=\"\", value=\"100091604920W300\", descr=\"UNIQUE WE\")\n",
+      "DEBUG:lasio.las:Parsing Header items section at lines 19-29 (773 bytes) ~CURVE INFORMATION\n",
+      "DEBUG:lasio.reader:Line 19: Section title parsed as '~CURVE INFORMATION'\n",
+      "DEBUG:lasio.reader:Line 20: treating as a comment and ignoring: '#MNEM.UNIT      API CODE      CURVE DESCRIPTION'\n",
+      "DEBUG:lasio.reader:Line 21: treating as a comment and ignoring: '#---------    -------------   ------------------------------'\n",
+      "DEBUG:lasio.reader:Line 22: parsed as CurveItem(mnemonic=\"DEPT\", unit=\"M\", value=\"\", descr=\"1  DEPTH\", original_mnemonic=\"DEPT\", data.shape=(0,))\n",
+      "DEBUG:lasio.reader:Line 23: parsed as CurveItem(mnemonic=\"DT\", unit=\"US/M\", value=\"\", descr=\"2  SONIC TRANSIT TIME\", original_mnemonic=\"DT\", data.shape=(0,))\n",
+      "DEBUG:lasio.reader:Line 24: parsed as CurveItem(mnemonic=\"RHOB\", unit=\"K/M3\", value=\"\", descr=\"3  BULK DENSITY\", original_mnemonic=\"RHOB\", data.shape=(0,))\n",
+      "DEBUG:lasio.reader:Line 25: parsed as CurveItem(mnemonic=\"NPHI\", unit=\"V/V\", value=\"\", descr=\"4   NEUTRON POROSITY\", original_mnemonic=\"NPHI\", data.shape=(0,))\n",
+      "DEBUG:lasio.reader:Line 26: parsed as CurveItem(mnemonic=\"SFLU\", unit=\"OHMM\", value=\"\", descr=\"5  RXO RESISTIVITY\", original_mnemonic=\"SFLU\", data.shape=(0,))\n",
+      "DEBUG:lasio.reader:Line 27: parsed as CurveItem(mnemonic=\"SFLA\", unit=\"OHMM\", value=\"\", descr=\"6  SHALLOW RESISTIVITY\", original_mnemonic=\"SFLA\", data.shape=(0,))\n",
+      "DEBUG:lasio.reader:Line 28: parsed as CurveItem(mnemonic=\"ILM\", unit=\"OHMM\", value=\"\", descr=\"7  MEDIUM RESISTIVITY\", original_mnemonic=\"ILM\", data.shape=(0,))\n",
+      "DEBUG:lasio.reader:Line 29: parsed as CurveItem(mnemonic=\"ILD\", unit=\"OHMM\", value=\"\", descr=\"8  DEEP RESISTIVITY\", original_mnemonic=\"ILD\", data.shape=(0,))\n",
+      "DEBUG:lasio.las:Parsing Header items section at lines 30-39 (1313 bytes) ~PARAMETER INFORMATION\n",
+      "DEBUG:lasio.reader:Line 30: Section title parsed as '~PARAMETER INFORMATION'\n",
+      "DEBUG:lasio.reader:Line 31: treating as a comment and ignoring: '#MNEM.UNIT        VALUE       DESCRIPTION'\n",
+      "DEBUG:lasio.reader:Line 32: treating as a comment and ignoring: '#---------    -------------   ------------------------------'\n",
+      "DEBUG:lasio.reader:Line 33: parsed as HeaderItem(mnemonic=\"BHT\", unit=\"DEGC\", value=\"35.5\", descr=\"BOTTOM HOLE TEMPE\")\n",
+      "DEBUG:lasio.reader:Line 34: parsed as HeaderItem(mnemonic=\"BS\", unit=\"MM\", value=\"200.0\", descr=\"BIT SIZE\")\n",
+      "DEBUG:lasio.reader:Line 35: parsed as HeaderItem(mnemonic=\"FD\", unit=\"K/M3\", value=\"1000.0\", descr=\"FLUID DENSITY\")\n",
+      "DEBUG:lasio.reader:Line 36: parsed as HeaderItem(mnemonic=\"MATR\", unit=\"\", value=\"0.0\", descr=\"NEUTRON MATRIX(0=LIME\")\n",
+      "DEBUG:lasio.reader:Line 37: parsed as HeaderItem(mnemonic=\"MDEN\", unit=\"\", value=\"2710.0\", descr=\"LOGGING MATRIX DEN\")\n",
+      "DEBUG:lasio.reader:Line 38: parsed as HeaderItem(mnemonic=\"RMF\", unit=\"OHMM\", value=\"0.216\", descr=\"MUD FILTRATE RES\")\n",
+      "DEBUG:lasio.reader:Line 39: parsed as HeaderItem(mnemonic=\"DFD\", unit=\"K/M3\", value=\"1525.0\", descr=\"DRILL FLUID DEN\")\n",
+      "DEBUG:lasio.las:Parsing Header (other) section at lines 40-42 (1811 bytes) ~Other\n",
+      "DEBUG:lasio.las:Parsing Data section at lines 43-47 (1947 bytes) ~A  DEPTH     DT       RHOB     NPHI     SFLU     SFLA      ILM      ILD\n",
+      "DEBUG:lasio.las:Storing reference and returning later...\n",
+      "DEBUG:lasio.las:Reading data section ~A  DEPTH     DT       RHOB     NPHI     SFLU     SFLA      ILM      ILD\n",
+      "TRACE_LASIO:lasio.reader:Line 44: 8 items counted in '1670.000   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
+      "TRACE_LASIO:lasio.reader:Line 45: 8 items counted in '1669.875   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
+      "TRACE_LASIO:lasio.reader:Line 46: 8 items counted in '1669.750   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
+      "DEBUG:lasio.reader:Consistently found 8 columns\n",
+      "DEBUG:lasio.las:Assigning data [1670.    1669.875 1669.75 ] to curve #0\n",
+      "DEBUG:lasio.las:Replacing -999.25 with nan in 1-th curve\n",
+      "DEBUG:lasio.las:Assigning data [123.45 123.45 123.45] to curve #1\n",
+      "DEBUG:lasio.las:Replacing -999.25 with nan in 2-th curve\n",
+      "DEBUG:lasio.las:Assigning data [2550. 2550. 2550.] to curve #2\n",
+      "DEBUG:lasio.las:Replacing -999.25 with nan in 3-th curve\n",
+      "DEBUG:lasio.las:Assigning data [0.45 0.45 0.45] to curve #3\n",
+      "DEBUG:lasio.las:Replacing -999.25 with nan in 4-th curve\n",
+      "DEBUG:lasio.las:Assigning data [123.45 123.45 123.45] to curve #4\n",
+      "DEBUG:lasio.las:Replacing -999.25 with nan in 5-th curve\n",
+      "DEBUG:lasio.las:Assigning data [123.45 123.45 123.45] to curve #5\n",
+      "DEBUG:lasio.las:Replacing -999.25 with nan in 6-th curve\n",
+      "DEBUG:lasio.las:Assigning data [110.2 110.2 110.2] to curve #6\n",
+      "DEBUG:lasio.las:Replacing -999.25 with nan in 7-th curve\n",
+      "DEBUG:lasio.las:Assigning data [105.6 105.6 105.6] to curve #7\n"
+     ]
+    }
+   ],
+   "source": [
+    "lasio_logger.setLevel(logging.TRACE_LASIO)\n",
     "\n",
     "l = lasio.read('../tests/examples/sample.las')"
    ]
@@ -203,11 +316,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "logger.setLevel(logging.CRITICAL)\n",
+    "lasio_logger.setLevel(logging.CRITICAL)\n",
     "\n",
     "l = lasio.read('../tests/examples/sample.las')"
    ]
@@ -216,14 +329,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In that case, no messages were logged since no CRITICAL level issues were encountered.\n",
+    "In that case, no messages were logged since no `CRITICAL` issues were encountered.\n",
     "\n",
     "Just to prove that the LAS file loaded, even though no messages were shown, here's a header item:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -234,7 +347,7 @@
        "HeaderItem(mnemonic=\"SRVC\", unit=\"\", value=\"ANY LOGGING COMPANY LTD.\", descr=\"\")"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,9 +366,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:wrap]",
+   "display_name": "Python [conda env:lasiodev]",
    "language": "python",
-   "name": "conda-env-wrap-py"
+   "name": "conda-env-lasiodev-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -267,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
