Update release notes for v0.30

--- a/docs/Add links to GitHub for all issue and PR refs in changelog.ipynb
+++ b/docs/Add links to GitHub for all issue and PR refs in changelog.ipynb
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "b03ba106",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_TO_REPO = \"lasio\""
+    "PATH_TO_REPO = \"..\""
    ]
   },
   {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "effc62ca",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "b90683fc",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True: lasio\\docs\\source\\changelog.rst\n"
+      "True: ..\\docs\\source\\changelog.rst\n"
      ]
     }
    ],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "74991d1a",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "f3ae6317",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "162c9850",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "a1883794",
    "metadata": {
     "scrolled": false
@@ -138,6 +138,7 @@
       "Found ref for #75\n",
       "Found ref for #78\n",
       "Found ref for #81\n",
+      "Did not find #83 ref, adding...\n",
       "Found ref for #84\n",
       "Found ref for #85\n",
       "Found ref for #92\n",
@@ -174,6 +175,8 @@
       "Found ref for #259\n",
       "Found ref for #262\n",
       "Found ref for #264\n",
+      "Did not find #265 ref, adding...\n",
+      "Found ref for #268\n",
       "Found ref for #271\n",
       "Found ref for #277\n",
       "Found ref for #278\n",
@@ -202,6 +205,7 @@
       "Found ref for #329\n",
       "Found ref for #330\n",
       "Found ref for #331\n",
+      "Did not find #332 ref, adding...\n",
       "Found ref for #333\n",
       "Found ref for #334\n",
       "Found ref for #335\n",
@@ -232,6 +236,7 @@
       "Found ref for #372\n",
       "Found ref for #373\n",
       "Found ref for #374\n",
+      "Did not find #375 ref, adding...\n",
       "Found ref for #377\n",
       "Found ref for #380\n",
       "Found ref for #382\n",
@@ -239,6 +244,7 @@
       "Found ref for #387\n",
       "Found ref for #390\n",
       "Found ref for #391\n",
+      "Did not find #392 ref, adding...\n",
       "Found ref for #393\n",
       "Found ref for #395\n",
       "Found ref for #396\n",
@@ -268,7 +274,47 @@
       "Found ref for #432\n",
       "Found ref for #437\n",
       "Found ref for #438\n",
-      "Found ref for #441\n"
+      "Did not find #439 ref, adding...\n",
+      "Found ref for #441\n",
+      "Did not find #444 ref, adding...\n",
+      "Did not find #446 ref, adding...\n",
+      "Found ref for #447\n",
+      "Found ref for #449\n",
+      "Found ref for #451\n",
+      "Did not find #452 ref, adding...\n",
+      "Found ref for #453\n",
+      "Found ref for #455\n",
+      "Did not find #459 ref, adding...\n",
+      "Did not find #460 ref, adding...\n",
+      "Did not find #461 ref, adding...\n",
+      "Did not find #465 ref, adding...\n",
+      "Did not find #466 ref, adding...\n",
+      "Did not find #469 ref, adding...\n",
+      "Did not find #470 ref, adding...\n",
+      "Did not find #471 ref, adding...\n",
+      "Did not find #472 ref, adding...\n",
+      "Did not find #473 ref, adding...\n",
+      "Did not find #475 ref, adding...\n",
+      "Did not find #477 ref, adding...\n",
+      "Did not find #478 ref, adding...\n",
+      "Did not find #479 ref, adding...\n",
+      "Did not find #480 ref, adding...\n",
+      "Did not find #481 ref, adding...\n",
+      "Did not find #482 ref, adding...\n",
+      "Did not find #483 ref, adding...\n",
+      "Did not find #484 ref, adding...\n",
+      "Did not find #485 ref, adding...\n",
+      "Did not find #486 ref, adding...\n",
+      "Did not find #487 ref, adding...\n",
+      "Did not find #489 ref, adding...\n",
+      "Did not find #490 ref, adding...\n",
+      "Did not find #491 ref, adding...\n",
+      "Did not find #495 ref, adding...\n",
+      "Did not find #498 ref, adding...\n",
+      "Did not find #500 ref, adding...\n",
+      "Did not find #501 ref, adding...\n",
+      "Did not find #502 ref, adding...\n",
+      "Did not find #503 ref, adding...\n"
      ]
     }
    ],
@@ -292,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "552e8e1b",
    "metadata": {},
    "outputs": [],
@@ -312,9 +358,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:wrap] *",
+   "display_name": "wrap",
    "language": "python",
-   "name": "conda-env-wrap-py"
+   "name": "wrap"
   },
   "language_info": {
    "codemirror_mode": {
